<resources>
    <string name="app_name">ClasstApp</string>
    <string name="dengan_bergabung_anda_setuju_untuk__">Dengan bergabung, Anda setuju untuk berbagi informasi kontak dengan semua anggota di kelas Anda</string>
    <string name="info_class">Info Class</string>
    <string name="aplikasi_info_class_ini_dibuat__">Aplikasi Info Class ini dibuat untuk saling mengenal teman - teman yang satu kelasnya dan untuk mengetahui bio/identitas teman - temannya</string>
    <string name="masuk">Masuk</string>
    <string name="icon_crocodic">Icon Crocodic</string>
    <string name="login">Login</string>
    <string name="menggunakan_akun__">Menggunakan Akun Crocodic Info Class</string>
    <string name="masukkan_akun_email">Masukkan Akun Email</string>
    <string name="password">Password</string>
    <string name="daftar_akun_">Daftar Akun ?</string>
    <string name="daftar_akun">Daftar Akun</string>
    <string name="daftarkan">Daftarkan</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="deskripsi_profile_anda">Deskripsi Profile Anda</string>
    <string name="no_handphone">No Handphone</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ganti_foto_profil">Ganti Foto Profil</string>
    <string name="biodata">Biodata</string>
    <string name="nama">Nama</string>
    <string name="no_handphone_teman">No. Handphone Teman</string>
    <string name="deskripsi_teman">Deskripsi Teman</string>
    <string name="no_handphone_anda">No. Handphone Anda</string>
    <string name="photo">Photo</string>
    <string name="friend">Friend</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="try_layout">Try Layout</string>
    <string name="register">Register</string>
    <string name="masukkan_no_handphone">Masukkan No Handphone</string>
    <string name="tunggu_sebentar_">Tunggu Sebentar...</string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="like">Like</string>
    <string name="logout">Logout</string>
    <string name="close">Close</string>
    <string name="right">Right</string>
    <string name="search">Search</string>
    <string name="lbl_required_edit_text">Form must filled</string>
    <string name="belum_punya_akun_">Belum Punya Akun ?</string>
    <string name="kelas">Kelas</string>
    <string name="msg_token_fmt">Token</string>

    <string-array name="class_list">
        <item>XII MM 1</item>
        <item>XII MM 2</item>
        <item>XII MM 3</item>
        <item>XII MM 4</item>
    </string-array>


</resources>