<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data />

    <ScrollView xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.register.RegisterActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="17dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/icon_crocodic"
                android:src="@drawable/icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etRegisterName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="25dp"
                android:autofillHints="@string/name"
                android:background="@drawable/background_custom_edit_text_1"
                android:hint="@string/name"
                android:inputType="textCapWords"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:paddingEnd="15dp"
                android:paddingBottom="5dp" />


            <EditText
                android:id="@+id/etRegisterPhone"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="15dp"
                android:autofillHints="@string/masukkan_no_handphone"
                android:background="@drawable/background_custom_edit_text_1"
                android:hint="@string/masukkan_no_handphone"
                android:inputType="number"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:paddingEnd="15dp"
                android:paddingBottom="5dp" />

            <EditText
                android:id="@+id/etRegisterPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="15dp"
                android:autofillHints="@string/password"
                android:background="@drawable/background_custom_edit_text_1"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:paddingEnd="15dp"
                android:paddingBottom="5dp" />


            <Button
                android:id="@+id/tvRegisterDaftarkan"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/light_blue"
                android:foregroundTint="@color/grey"
                android:gravity="center"
                android:onClick="onClickRegisterActivity"
                android:text="@string/daftarkan"
                android:textAllCaps="false"
                android:textColor="@color/white_true" />

            <TextView
                android:id="@+id/tvRegisterNotifikasi"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/background_custom_text_view_2"
                android:gravity="center"
                android:onClick="onClickRegisterActivity"
                android:text="@string/notifikasi"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:visibility="gone" />


        </LinearLayout>


    </ScrollView>

</layout>

