<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.mainscreen.MainActivity">


        <LinearLayout
            android:id="@+id/linearMainOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="17dp">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="170dp"
                android:contentDescription="@string/icon_crocodic"
                android:src="@drawable/icon_with_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/info_class"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/aplikasi_info_class_ini_dibuat__"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnMasukApp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/light_blue"
                android:onClick="onClickMainActivity"
                android:text="@string/masuk"
                android:textAllCaps="false"
                android:textColor="@color/white_true" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearMainTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearMainOne"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            android:padding="10dp">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tunggu_sebentar_"
                android:textColor="@color/dark_grey"
                android:textSize="13sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="17dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="17dp"
            android:layout_marginBottom="17dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/dengan_bergabung_anda_setuju_untuk__"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </RelativeLayout>

</layout>
