<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data />

    <ScrollView xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="17dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/icon_crocodic"
                android:src="@drawable/icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menggunakan_akun__"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/etLoginNoHp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="25dp"
                android:autofillHints="@string/masukkan_no_handphone"
                android:background="@drawable/background_custom_edit_text_1"
                android:hint="@string/masukkan_no_handphone"
                android:inputType="number"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:paddingEnd="15dp"
                android:paddingBottom="5dp" />

            <EditText
                android:id="@+id/etLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="15dp"
                android:autofillHints="@string/password"
                android:background="@drawable/background_custom_edit_text_1"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:paddingEnd="15dp"
                android:paddingBottom="5dp" />


            <Button
                android:id="@+id/tvLogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/light_blue"
                android:gravity="center"
                android:onClick="onClickLoginActivity"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white_true" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/tvDaftarAkun"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="7dp"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:onClick="onClickLoginActivity"
                android:text="@string/belum_punya_akun_"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:cornerRadius="2dp"
                app:strokeColor="@color/black"
                app:strokeWidth="1dp" />

            <TextView
                android:id="@+id/tvLoginTry"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/background_custom_text_view_2"
                android:gravity="center"
                android:onClick="onClickLoginActivity"
                android:text="@string/try_layout"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:visibility="gone" />


        </LinearLayout>

    </ScrollView>

</layout>
