<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="data"
            type="com.example.classtapp.data.user.User" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.edit_profile.EditProfileActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="17dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivEditProfileClose"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/close"
                    android:onClick="onClickEditProfileActivity"
                    android:src="@drawable/icon_close" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/edit_profile"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/ivEditProfileUpdate"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/right"
                    android:onClick="onClickEditProfileActivity"
                    android:src="@drawable/icon_right" />

            </RelativeLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivEditProfilePhoto"
                app:imageUrlProfile='@{data.photo}'
                app:initialProfile='@{data.name}'
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:contentDescription="@string/photo"
                android:focusable="true"
                android:onClick="onClickEditProfileActivity"
                android:src="@drawable/icon_profile" />

            <TextView
                android:id="@+id/tvEditProfileChangePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="?attr/selectableItemBackground"
                android:onClick="onClickEditProfileActivity"
                android:text="@string/ganti_foto_profil"
                android:textAlignment="center"
                android:textColor="@color/light_blue"
                android:textSize="17sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/nama"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/etEditProfileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/nama"
                android:hint="@string/nama"
                android:inputType="textCapWords"
                android:minHeight="48dp"
                android:text='@{data.name}'
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/biodata"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/etEditProfileDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/biodata"
                android:hint="@string/biodata"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:text='@{data.bio}'
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="17sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/no_handphone"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/etEditProfilePhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/no_handphone"
                android:hint="@string/no_handphone"
                android:inputType="number"
                android:minHeight="48dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="17sp" />

        </LinearLayout>

    </ScrollView>

</layout>

